<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="44dp"
    android:paddingRight="16dp"
    android:paddingBottom="44dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textBar"
        android:layout_width="350dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="end"
        android:maxLength="15"
        style="@style/textBar">
    </TextView>

    <GridLayout
        android:id="@+id/bckAndclr"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:columnCount="2"
        android:rowCount="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonGrid">

        <Button
            android:text="@string/back"
            android:onClick="onBackClicked"
            style="@style/bigButton"
            />

        <Button
            android:text="@string/clear"
            android:onClick="onClearClicked"
            style="@style/bigButton"
            />
    </GridLayout>


    <GridLayout
        android:id="@+id/buttonGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <Button
            android:id="@+id/_7"
            android:text="@string/_7"
            android:onClick="onButtonClicked"
            style="@style/numberButton"
            />

        <Button
            android:id="@+id/_8"
            android:text="@string/_8"
            android:onClick="onButtonClicked"
            style="@style/numberButton"
            />

        <Button
            android:id="@+id/_9"
            android:text="@string/_9"
            android:onClick="onButtonClicked"
            style="@style/numberButton"
            />

        <Button
            android:id="@+id/plus"
            android:text="@string/plus"
            android:onClick="onButtonClicked"
            style="@style/button"
            />

        <Button
            android:id="@+id/_4"
            android:text="@string/_4"
            android:onClick="onButtonClicked"
            style="@style/numberButton"
            />

        <Button
            android:id="@+id/_5"
            android:text="@string/_5"
            android:onClick="onButtonClicked"
            style="@style/numberButton"
            />

        <Button
            android:id="@+id/_6"
            android:text="@string/_6"
            android:onClick="onButtonClicked"
            style="@style/numberButton"
            />

        <Button
            android:id="@+id/minus"
            android:text="@string/minus"
            android:onClick="onButtonClicked"
            style="@style/button"
            />

        <Button
            android:id="@+id/_1"
            android:text="@string/_1"
            android:onClick="onButtonClicked"
            style="@style/numberButton"
            />

        <Button
            android:id="@+id/_2"
            android:text="@string/_2"
            android:onClick="onButtonClicked"
            style="@style/numberButton"
            />

        <Button
            android:id="@+id/_3"
            android:text="@string/_3"
            android:onClick="onButtonClicked"
            style="@style/numberButton"
            />

        <Button
            android:id="@+id/times"
            android:text="@string/times"
            android:onClick="onButtonClicked"
            style="@style/button"
            />

        <Button
            android:id="@+id/equals"
            android:text="@string/equals"
            style="@style/button"
            />

        <Button
            android:id="@+id/_0"
            android:text="@string/_0"
            android:onClick="onButtonClicked"
            style="@style/numberButton"
            />

        <Button
            android:id="@+id/point"
            android:text="@string/point"
            android:onClick="onButtonClicked"
            style="@style/button"
            />

        <Button
            android:id="@+id/divided_by"
            android:text="@string/divided_by"
            android:onClick="onButtonClicked"
            style="@style/button"
            />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>